Fix the filename in receive dialog overflow bug.

--- a/public/styles.css
+++ b/public/styles.css
@@ -111,6 +111,7 @@ h3 {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
+    overflow: hidden;
 }
 
 .font-body1,
